# ros2_perception

./: .gitignore  README.MD
src/realsense/: package.xml  setup.py
src/realsense/realsense/: depth_node.py  detector_node.py  postprocess_frame.py  realsense_node.py  tracker_node.py  visualize.py
src/realsense/realsense/tracker/: byte_tracker.py  mot_metrics.py
src/realsense/realsense/utils/: boxes.py
src/realsense_bringup/: package.xml  setup.py
src/realsense_bringup/launch/: realsense_app.launch.py
src/realsense_msgs/: CMakeLists.txt  package.xml
src/realsense_msgs/msg/: BoundingBox.msg  Detection3D.msg  Detection3DArray.msg  DetectionArray.msg
